Changed list of modules and small tweaks.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "start:dev": "webpack-dev-server --watch-poll",
         "netlify:deploy": "netlify deploy --dir=./dist -p -m \"$(git log -1 --pretty=%B)\""
     },
-    "author": "Andriy Diduh",
-    "license": "ISC",
+    "author": "@author",
+    "license": "MIT",
     "devDependencies": {
         "@babel/cli": "^7.6.0",
         "@babel/core": "^7.6.0",
@@ -55,7 +55,6 @@
         "@types/flux": "^3.1.9",
         "@types/geojson": "^7946.0.7",
         "@types/node": "^11.13.19",
-        "@types/ol": "^5.3.5",
         "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
         "@types/react-router-dom": "^4.3.4",
@@ -65,13 +64,11 @@
         "axios": "^0.19.0",
         "concurrently": "^4.1.1",
         "core-js": "^3.2.1",
-        "firebase": "^7.5.2",
         "flux": "^3.1.3",
         "geojson": "^0.5.0",
         "imagemin": "^5.3.1",
         "jquery": "^3.4.1",
         "node-sass": "^4.12.0",
-        "ol": "^5.3.3",
         "path": "^0.12.7",
         "react": "^16.9.0",
         "react-day-picker": "^7.3.2",
@@ -80,7 +77,6 @@
         "react-router-dom": "^4.3.1",
         "react-slick": "^0.25.2",
         "regenerator-runtime": "^0.13.3",
-        "slick-carousel": "^1.8.1",
         "sort-package-json": "^1.22.1",
         "svg-url-loader": "^2.3.3",
         "typescript": "^3.5.3"
